--- a/config.json
+++ b/config.json
@@ -2,8 +2,15 @@
   "port": 5021,
   "twitchToken": "gj8203g2480g248jg28g4",
   "redis": {
-    "host": "",
+    "host": "127.0.0.1",
     "port": 6379,
     "password": ""
+  },
+  "cache": {
+    "bttv": 300,
+    "ffz": 300,
+    "7tv": 300,
+    "twitch": 3600,
+    "all": 86400
   }
 }
