--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "type": "module",
   "dependencies": {
     "@jest/globals": "^27.0.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "node-fetch": "^2.6.1",
